corrected the #get-karma section's layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,11 @@ p {
   #get_karma {
     background-color: rgb(241, 229, 205);
     display: grid;
+    grid-template-columns: 50% 50%;
     margin-bottom: 2em;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
   }
   #get_karma img {
     grid-column: 1 / 2;
@@ -365,10 +369,6 @@ p {
   #get_karma h4 {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
-    justify-self: center;
-    align-self: center;
-    margin: 0.8em 1.5em;
-    text-align: center;
     font-style: italic;
     font-weight: 400;
     font-size: 1.5em;
